"Class name change"

--- a/employees.html
+++ b/employees.html
@@ -11,7 +11,7 @@
 <body>
     <div class="horizantal-content">
         <nav class="horizantal-nav">
-            <img src="images/TezoLogo.svg" alt="TezoLogo" class="tezo-logo"/>
+            <img src="images/TezoLogo.svg" alt="TezoLogo" class="brand-logo"/>
             <img src="images/handle.png" alt="Handle" class="handle"/>
             <p class="horizantal-nav-description">ALL</p>
             <div class="dashboard features">
