--- a/roles.html
+++ b/roles.html
@@ -87,7 +87,7 @@
                 <button class="apply-btn">Apply</button></div>
             </div>
             <section class="roles-info">
-                <div class="role-types">
+                <div class="role-card">
                     <div class="role-details">
                         <p class="role-name m-8"><b>Customer Service Manager</b></p>
                         <img src="images/edit.svg" alt="edit-img"/>
@@ -113,7 +113,7 @@
                     </div>
                     <a href="role-descr.html" class="role-descr-btn"><p class="view-employee m-8">View all employees <img src="images/Vector.svg" alt="Vector"></p></a>
                 </div>
-                <div class="role-types">
+                <div class="role-card">
                     <div class="role-details">
                         <p class="role-name m-8"><b>Ux Designer</b></p>
                         <img src="images/edit.svg" alt="edit-img"/>
@@ -139,7 +139,7 @@
                     </div>
                     <a href="role-descr.html" class="role-descr-btn"><p class="view-employee m-8">View all employees <img src="images/Vector.svg" alt="Vector"></p></a>
                 </div>
-                <div class="role-types">
+                <div class="role-card">
                     <div class="role-details">
                         <p class="role-name m-8"><b>Assistant Backend Developer</b></p>
                         <img src="images/edit.svg" alt="edit-img"/>
@@ -165,7 +165,7 @@
                     </div>
                     <a href="role-descr.html" class="role-descr-btn"><p class="view-employee m-8">View all employees <img src="images/Vector.svg" alt="Vector"></p></a>
                 </div>
-                <div class="role-types">
+                <div class="role-card">
                     <div class="role-details">
                         <p class="role-name m-8"><b>Human Resource Manager</b></p>
                         <img src="images/edit.svg" alt="edit-img"/>
@@ -191,7 +191,7 @@
                     </div>
                     <a href="role-descr.html" class="role-descr-btn"><p class="view-employee m-8">View all employees <img src="images/Vector.svg" alt="Vector"></p></a>
                 </div>
-                <div class="role-types">
+                <div class="role-card">
                     <div class="role-details">
                         <p class="role-name m-8"><b>Front-end Developer</b></p>
                         <img src="images/edit.svg" alt="edit-img"/>
@@ -217,7 +217,7 @@
                     </div>
                     <a href="role-descr.html" class="role-descr-btn"><p class="view-employee m-8">View all employees <img src="images/Vector.svg" alt="Vector"></p></a>
                 </div>
-                <div class="role-types">
+                <div class="role-card">
                     <div class="role-details">
                         <p class="role-name m-8"><b>Senior Developer</b></p>
                         <img src="images/edit.svg" alt="edit-img"/>
