--- a/roles.html
+++ b/roles.html
@@ -7,25 +7,27 @@
         <link rel="stylesheet" href="css/roles.css">
         <link href="https://fonts.cdnfonts.com/css/helvetica-255" rel="stylesheet">
         <!-- <link rel="stylesheet" href="css/common.css"> -->
+        <script src="js/roles.js" defer></script>
                 
         <title>Tezo</title>
     </head>
     <body>
         <div class="horizantal-content">
             <nav class="horizantal-nav">
-                <img src="images/TezoLogo.svg" alt="TezoLogo" class="tezo-logo"/>
+                <img src="images/tezosymbol.png" alt="tezosybol" class="brand-icon"/>
+                <img src="images/TezoLogo.svg" alt="TezoLogo" class="brand-logo"/>
                 <p class="horizantal-nav-description">ALL</p>
                 <div class="dashboard features">
                     <img src="images/Dashboard.svg" alt="DashboardLogo" class="horizontal-logos">
                     <p class="horizantal-nav-names">Dashboard</p>
                 </div>
                 <a href="employees.html" class="employee-btn"><div class="employees features">
-                    <img src="images/Employees.svg" alt="EmployeesLogo" class="horizontal-logos">
+                    <img src="images/team_svgrepo.com.svg" alt="EmployeesLogo" class="horizontal-logos">
                     <p class="horizantal-nav-names">Employees</p>
                 </div></a>
                 <p class="roles-or-user-management horizantal-nav-description" >ROLE/USER MANAGEMENT</p>
                 <div class="roles features">
-                    <img src="images/Roles.svg" alt="RolesLogo" class="horizontal-logos">
+                    <img src="images/roles_red.svg" alt="RolesLogo" class="horizontal-logos">
                     <p  class="horizantal-nav-names">Roles</p>
                     <img src="images/side_arrow.svg" alt="side_arrow" class="side-arrow-roles"/>
                 </div>
@@ -43,7 +45,7 @@
             </div>
         </div>
         <div class="container">
-            <img src="images/handle.png" alt="Handle" class="handle"/>
+            <img src="images/handle.png" alt="Handle" class="handle"  onclick="toggle()"/>
             <nav class="vertical-nav">
                 <img src="images/bx-search.png" alt="Search" />
                 <input type="text" placeholder="Search" class="search-box">
@@ -65,185 +67,30 @@
                     <p>Roles</p>
                     <p class="content">All the roles are configured here</p>
                 </div>
-                <button class="add-btn"><img src="images/Add.svg" alt="add-img" />ADD ROLE</button>
+                <button class="add-btn" onclick="window.location.href='addRoles.html'"><img src="images/Add.svg" alt="add-img"  />ADD ROLE</button>
             </div>
             <div class="filter-search">
                 <div>
                 <span>Filter</span>
                 <img src="images/bars-filter.svg" alt="bars-filter" width="15px">
-                <select>
+                <select onchange="popColor()" id="role-location">
                     <option value="none"  selected disabled hidden>Location</option>
                     <option value="Hyderabad">Hyderabad</option>
                     <option value="Chennai">Chennai</option>
                     <option value="Pune">Pune</option>
                 </select>
-                <select>
+                <select onchange="popColor()" id="role-department">
                     <option value="none"  selected disabled hidden>Department</option>
-                    <option value="Product Engg">Product Engg</option>
+                    <option value="Product Engg.">Product Engg</option>
                     <option value="UI/UX">UI/UX</option>
                     <option value="Architect">Architect</option>
                 </select></div>
-                <div><button class="reset-btn">Reset</button>
-                <button class="apply-btn">Apply</button></div>
+                <div><button class="reset-btn" onclick="resetFilters()">Reset</button>
+                <button class="apply-btn" onclick="applyFilter()">Apply</button></div>
             </div>
             <section class="roles-info">
-                <div class="role-card">
-                    <div class="role-details">
-                        <p class="role-name m-8"><b>Customer Service Manager</b></p>
-                        <img src="images/edit.svg" alt="edit-img"/>
-                    </div>
-                    <div class="role-details">
-                        <div class="alignment"><img src="images/team_svgrepo.com.svg" alt="team-img"><p class="m-8">Department</p></div>
-                        <p class="m-8">IT</p>
-                    </div>
-                    <div class="role-details">
-                        <div class="alignment">
-                            <img src="images/location-pin-alt-1_svgrepo.com.svg" alt="location-img"><p class="m-8">Location</p></div>
-                        <p class="m-8">Hyderabad</p>
-                    </div>
-                    <div class="role-details">
-                        <p class="m-8">Total Employees</p>
-                        <div class="total-employees">
-                            <img src="images/p1.webp" alt="person1" class="p1 person-img">
-                            <img src="images/p2.webp" alt="person2" class="p2 person-img">
-                            <img src="images/p3.webp" alt="person3" class="p3 person-img">
-                            <img src="images/p4.webp" alt="person4" class="p4 person-img">
-                            <div class="emp-count"><p class="emp-count-num">+43</p></div>
-                        </div>
-                    </div>
-                    <a href="role-descr.html" class="role-descr-btn"><p class="view-employee m-8">View all employees <img src="images/Vector.svg" alt="Vector"></p></a>
-                </div>
-                <div class="role-card">
-                    <div class="role-details">
-                        <p class="role-name m-8"><b>Ux Designer</b></p>
-                        <img src="images/edit.svg" alt="edit-img"/>
-                    </div>
-                    <div class="role-details">
-                        <div class="alignment"><img src="images/team_svgrepo.com.svg" alt="team-img"><p class="m-8">Department</p></div>
-                        <p class="m-8">Product Engg.</p>
-                    </div>
-                    <div class="role-details">
-                        <div class="alignment">
-                            <img src="images/location-pin-alt-1_svgrepo.com.svg" alt="location-img"><p class="m-8">Location</p></div>
-                        <p class="m-8">Hyderabad</p>
-                    </div>
-                    <div class="role-details">
-                        <p class="m-8">Total Employees</p>
-                        <div class="total-employees">
-                            <img src="images/p1.webp" alt="person1" class="p1 person-img">
-                            <img src="images/p2.webp" alt="person2" class="p2 person-img">
-                            <img src="images/p3.webp" alt="person3" class="p3 person-img">
-                            <img src="images/p4.webp" alt="person4" class="p4 person-img">
-                            <div class="emp-count"><p class="emp-count-num">+43</p></div>
-                        </div>
-                    </div>
-                    <a href="role-descr.html" class="role-descr-btn"><p class="view-employee m-8">View all employees <img src="images/Vector.svg" alt="Vector"></p></a>
-                </div>
-                <div class="role-card">
-                    <div class="role-details">
-                        <p class="role-name m-8"><b>Assistant Backend Developer</b></p>
-                        <img src="images/edit.svg" alt="edit-img"/>
-                    </div>
-                    <div class="role-details">
-                        <div class="alignment"><img src="images/team_svgrepo.com.svg" alt="team-img"><p class="m-8">Department</p></div>
-                        <p class="m-8">UIUX</p>
-                    </div>
-                    <div class="role-details">
-                        <div class="alignment">
-                            <img src="images/location-pin-alt-1_svgrepo.com.svg" alt="location-img"><p class="m-8">Location</p></div>
-                        <p class="m-8">Hyderabad</p>
-                    </div>
-                    <div class="role-details">
-                        <p class="m-8">Total Employees</p>
-                        <div class="total-employees">
-                            <img src="images/p1.webp" alt="person1" class="p1 person-img">
-                            <img src="images/p2.webp" alt="person2" class="p2 person-img">
-                            <img src="images/p3.webp" alt="person3" class="p3 person-img">
-                            <img src="images/p4.webp" alt="person4" class="p4 person-img">
-                            <div class="emp-count"><p class="emp-count-num">+43</p></div>
-                        </div>
-                    </div>
-                    <a href="role-descr.html" class="role-descr-btn"><p class="view-employee m-8">View all employees <img src="images/Vector.svg" alt="Vector"></p></a>
-                </div>
-                <div class="role-card">
-                    <div class="role-details">
-                        <p class="role-name m-8"><b>Human Resource Manager</b></p>
-                        <img src="images/edit.svg" alt="edit-img"/>
-                    </div>
-                    <div class="role-details">
-                        <div class="alignment"><img src="images/team_svgrepo.com.svg" alt="team-img"><p class="m-8">Department</p></div>
-                        <p class="m-8">IT</p>
-                    </div>
-                    <div class="role-details">
-                        <div class="alignment">
-                            <img src="images/location-pin-alt-1_svgrepo.com.svg" alt="location-img"><p class="m-8">Location</p></div>
-                        <p class="m-8">Hyderabad</p>
-                    </div>
-                    <div class="role-details">
-                        <p class="m-8">Total Employees</p>
-                        <div class="total-employees">
-                            <img src="images/p1.webp" alt="person1" class="p1 person-img">
-                            <img src="images/p2.webp" alt="person2" class="p2 person-img">
-                            <img src="images/p3.webp" alt="person3" class="p3 person-img">
-                            <img src="images/p4.webp" alt="person4" class="p4 person-img">
-                            <div class="emp-count"><p class="emp-count-num">+43</p></div>
-                        </div>
-                    </div>
-                    <a href="role-descr.html" class="role-descr-btn"><p class="view-employee m-8">View all employees <img src="images/Vector.svg" alt="Vector"></p></a>
-                </div>
-                <div class="role-card">
-                    <div class="role-details">
-                        <p class="role-name m-8"><b>Front-end Developer</b></p>
-                        <img src="images/edit.svg" alt="edit-img"/>
-                    </div>
-                    <div class="role-details">
-                        <div class="alignment"><img src="images/team_svgrepo.com.svg" alt="team-img"><p class="m-8">Department</p></div>
-                        <p class="m-8">Product Engg.</p>
-                    </div>
-                    <div class="role-details">
-                        <div class="alignment">
-                            <img src="images/location-pin-alt-1_svgrepo.com.svg" alt="location-img"><p class="m-8">Location</p></div>
-                        <p class="m-8">Hyderabad</p>
-                    </div>
-                    <div class="role-details">
-                        <p class="m-8">Total Employees</p>
-                        <div class="total-employees">
-                            <img src="images/p1.webp" alt="person1" class="p1 person-img">
-                            <img src="images/p2.webp" alt="person2" class="p2 person-img">
-                            <img src="images/p3.webp" alt="person3" class="p3 person-img">
-                            <img src="images/p4.webp" alt="person4" class="p4 person-img">
-                            <div class="emp-count"><p class="emp-count-num">+43</p></div>
-                        </div>
-                    </div>
-                    <a href="role-descr.html" class="role-descr-btn"><p class="view-employee m-8">View all employees <img src="images/Vector.svg" alt="Vector"></p></a>
-                </div>
-                <div class="role-card">
-                    <div class="role-details">
-                        <p class="role-name m-8"><b>Senior Developer</b></p>
-                        <img src="images/edit.svg" alt="edit-img"/>
-                    </div>
-                    <div class="role-details">
-                        <div class="alignment"><img src="images/team_svgrepo.com.svg" alt="team-img"><p class="m-8">Department</p></div>
-                        <p class="m-8">UIUX</p>
-                    </div>
-                    <div class="role-details">
-                        <div class="alignment">
-                            <img src="images/location-pin-alt-1_svgrepo.com.svg" alt="location-img"><p class="m-8">Location</p></div>
-                        <p class="m-8">Hyderabad</p>
-                    </div>
-                    <div class="role-details">
-                        <p class="m-8">Total Employees</p>
-                        <div class="total-employees">
-                            <img src="images/p1.webp" alt="person1" class="p1 person-img">
-                            <img src="images/p2.webp" alt="person2" class="p2 person-img">
-                            <img src="images/p3.webp" alt="person3" class="p3 person-img">
-                            <img src="images/p4.webp" alt="person4" class="p4 person-img">
-                            <div class="emp-count"><p class="emp-count-num">+43</p></div>
-                        </div>
-                    </div>
-                    <a href="role-descr.html" class="role-descr-btn"><p class="view-employee m-8">View all employees <img src="images/Vector.svg" alt="Vector"></p></a>
-                </div>
             </section>
         </div>
+        <script src="js/common.js"></script>
 </body>
 </html>
