--- a/add-employee.html
+++ b/add-employee.html
@@ -13,6 +13,7 @@
         <nav class="horizantal-nav">
             <img src="images/tezosymbol.png" alt="tezosybol" class="brand-icon"/>
             <img src="images/TezoLogo.svg" alt="TezoLogo" class="brand-logo"/>
+            <img src="images/handle.png" alt="Handle" class="handle" onclick="toggle()"/> 
             <p class="horizantal-nav-description">ALL</p>
             <div class="dashboard features">
                 <img src="images/Dashboard.svg" alt="DashboardLogo" class="horizontal-logos">
@@ -42,14 +43,14 @@
         </div>
     </div>
     <div class="container">
-        <img src="images/handle.png" alt="Handle" class="handle" onclick="toggle()"/>
+     
         <nav class="vertical-nav">
             <img src="images/bx-search.png" alt="Search" />
             <input type="text" placeholder="Search" class="search-box">
-            <img src="images/Language.svg" alt="Language" class="clr-img"/>
-            <img src="images/Dashboard.svg" alt="Language" class="clr-img"/>
-            <img src="images/Mode.svg" alt="Language" class="clr-img"/>
-            <img src="images/Notifications.svg" alt="Language" class="clr-img"/>
+            <img src="images/Language.svg" alt="Language" class="clr-img language-icon"/>
+            <img src="images/Dashboard.svg" alt="Language" class="clr-img dashboard-icon"/>
+            <img src="images/Mode.svg" alt="Language" class="clr-img mode-icon"/>
+            <img src="images/Notifications.svg" alt="Language" class="clr-img notifications-icon"/>
             <div class="admin-details">
                 <img src="images/Active-status-1.png" alt="Active-status-1" class="admin-img">
                 <div>
@@ -154,7 +155,7 @@
                 </div>
                 </div>
                 <div class="buttons">
-                    <input type="button" value="Cancel" class="cancel-btn" onclick=" window.location.href = 'employees.html';">
+                    <input type="button" value="Cancel" class="cancel-btn" onclick="sessionStorage.removeItem('roleId'); window.location.href = 'employees.html';">
                     <input type="submit" value="Add Employee" class="add-btn">
                 </div>
             </form>
