--- a/role-descr.html
+++ b/role-descr.html
@@ -13,7 +13,7 @@
         <nav class="horizantal-nav">
             <img src="images/tezosymbol.png" alt="tezosybol" class="brand-icon"/>
             <img src="images/TezoLogo.svg" alt="TezoLogo" class="brand-logo"/>
-            <img src="images/handle.png" alt="Handle" class="handle"  onclick="toggle()"/>
+            <img src="images/handle.png" alt="Handle" class="handle"  onclick="toggleSideBar()"/>
             <p class="horizantal-nav-description">ALL</p>
             <div class="dashboard features">
                 <img src="images/Dashboard.svg" alt="DashboardLogo" class="horizontal-logos">
@@ -79,5 +79,6 @@
     </div>
     <script src="js/common.js" ></script>
     <script src="js/roleDescr.js" ></script>
+    <script src="js/storageFunctionalities.js"></script>
 </body>
 </html>
